--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,34 +23,23 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+        c_compiler: [gcc, clang]
         include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-        exclude:
-          - os: windows-latest
-            c_compiler: gcc
-          - os: windows-latest
-            c_compiler: clang
-          - os: ubuntu-latest
-            c_compiler: cl
 
     steps:
     - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
 
-    - name: Install Vulkan SDK Linux
-      if: startsWith(matrix.os, 'ubuntu')
+    - name: Install Vulkan SDK
       run: |
           sudo apt-get update
           sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
@@ -58,22 +47,6 @@ jobs:
           sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list http://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list
           sudo apt update
           sudo apt-get install -y vulkan-sdk
-          
-    - name: Install Vulkan SDK Windows
-      if: startsWith(matrix.os, 'windows')
-      run: |
-          mkdir vulkan-sdk-install
-          cd vulkan-sdk-install
-          curl -o vulkan-sdk.exe https://sdk.lunarg.com/sdk/download/latest/windows/vulkan-sdk.exe
-          .\vulkan-sdk.exe --accept-licenses --default-answer --confirm-command install
-          $vulkanSdkPath = Get-ChildItem "C:\VulkanSDK" -Directory | Sort-Object CreationTime -Descending | Select-Object -First 1
-          echo "VULKAN_SDK_VERSION=$($vulkanSdkPath.Name)" >> $GITHUB_ENV
-
-    - name: Set Vulkan Environment Variables
-      run: |
-          echo "VULKAN_SDK_PATH=C:\VulkanSDK\$VULKAN_SDK_VERSION" >> $GITHUB_ENV
-          echo "VULKAN_SDK_INCLUDE=C:\VulkanSDK\$VULKAN_SDK_VERSION\Include" >> $GITHUB_ENV
-          echo "VULKAN_SDK_LIB=C:\VulkanSDK\$VULKAN_SDK_VERSION\Lib" >> $GITHUB_ENV
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -90,8 +63,6 @@ jobs:
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DVulkan_LIBRARY=$VULKAN_SDK_LIB/vulkan-1.lib
-        -DVulkan_INCLUDE_DIR=$VULKAN_SDK_INCLUDE
         -S ${{ github.workspace }}
 
     - name: Build
